hard-gists/2909661/run.log
=== Docker Run Log for 2909661 ===
Started at: Mi 29. Okt 13:21:04 CET 2025

[2025-10-29 13:21:14] START: Running container for 2909661
[2025-10-29 13:21:14] SUCCESS: Container 1ed9eb562a5c568f2f26b12efcec566c979515f5f6968ae59765e7f6ee2e4116 started for 2909661
=== Container logs for 2909661 ===
Traceback (most recent call last):
  File "/snippet.py", line 1, in <module>
    import webapp2
  File "/usr/local/lib/python3.11/site-packages/webapp2.py", line 571
    except Exception, e:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 2909661 ===
[2025-10-29 13:21:16] INFO: Container 1ed9eb562a5c568f2f26b12efcec566c979515f5f6968ae59765e7f6ee2e4116 has stopped
